# csh

./: .cproject  .gitignore  .gitmodules  .project  README.md  build  can.yaml  caninit.sh  configure  debian_packages  dpkg_build.sh  gendoc.py  iflist.yaml  install  known_hosts  linux.ld  meson.build  pack  pack_dpkg  sc.csh  setcap_can  wscript  zmq.yaml
.github/workflows/: build.yml
cross/rapsberrypi/: Dockerfile  cross_raspberrypi.txt
cross/raspberrypi/: Dockerfile_aarch64  Dockerfile_gnueabihf  cross_raspberrypi_aarch64.txt  cross_raspberrypi_gnueabihf.txt  make_sysroot.sh
debian/: Dockerfile_ubuntu-20.04  Dockerfile_ubuntu-22.04  Dockerfile_ubuntu-24.04
doc/: index_man.rst  param_list_add.csh
doc/MAN/APMs/: csh_example.rst  csh_si.rst  introduction.rst
doc/MAN/Appendices/: abbreviation_list.rst
doc/MAN/Installation/: build.rst  init_config.rst  install.rst  launch_sw.rst  requirements.rst
doc/MAN/Introduction/: description.rst  features.rst  physical_setup.rst
doc/MAN/Operating_Instructions/: buildin_commands.rst  builtin_commands.csv  command_examples.rst  cortex_apm.rst  cortex_examples.rst  environment_variables.rst  example.rst  hk_apm.rst  hk_examples.rst  list_commands.rst  scheduler_examples.rst  shell_interface.rst  usage.rst
include/: param_config.h
init/: bridge.csh  can.csh  caninit  eth.csh  kiss.csh  router.csh  uart.csh  udp.csh  zmq1.csh  zmq2.csh
lib/csp_ftp/: meson.build
lib/csp_ftp/include/csp_ftp/: ftp_client.h  ftp_server.h
lib/csp_ftp/src/: ftp_client.c  ftp_server.c
lib/satlab/: wscript
lib/satlab/include/satlab/: ais.h
lib/satlab/src/: ais.c
src/: ais.c  aisbits.c  aisbits.h  base64.c  ccsds_randomize.c  ccsds_randomize.h  commands_lock.c  crypto.c  crypto.h  crypto_param.c  crypto_test.c  crypto_test.h  crypto_test_param.c  crypto_test_param.h  crypto_test_slash.c  csh_defaults.c  csh_internals.h  csp_debug_param.c  csp_if_binparse.c  csp_if_cortex.c  csp_if_cortex.h  csp_if_eth.c  csp_if_eth.h  csp_if_eth_pbuf.c  csp_if_eth_pbuf.h  csp_if_tun.c  csp_if_tun.h  csp_init_cmd.c  csp_param.c  csp_scan.c  elfparse.c  environment.c  environment.h  ftp_slash.c  gresource.xml  gtktest.c  hk_param_sniffer.c  hk_param_sniffer.h  hk_retrieve.c  iflist_yaml.c  (+71 more)
src/python/: python_loader.c  python_loader.h
src/ui/: csh-page-whlctl.c  csh-page-whlctl.h  csh-page-whlctl.ui  csh-page.c  csh-page.h  csh-page.ui  csh-ui-macros.h  csh.c  csh.gresources.xml  csh.h  csh_window.c  csh_window.h  csh_window.ui  si-param-button.c  si-param-button.ui  si-param-label.c  si-param-label.h  si-param-label.ui
src/ui/FSS/: fss.c  fss.h  fss.ui
src/ui/PDU/: pdu.c  pdu.h  pdu.ui
src/ui/WHEEL/: csh-page-whlctl.c  csh-page-whlctl.h  csh-page-whlctl.ui
src/ui/custom_widgets/: si-node-hostname-label.c  si-node-hostname-label.h  si-node-hostname-label.ui  si-param-button.c  si-param-button.h  si-param-button.ui  si-param-label.c  si-param-switch.c  si-param-switch.h  si-param-switch.ui  si-submit-entry-button.c  si-submit-entry-button.h  si-submit-entry-button.ui
src/ui/pages/welcome/: csh-page-welcome.c  csh-page-welcome.h  csh-page-welcome.ui
src/ui/pages/whlctl/: csh-page-whlctl.c  csh-page-whlctl.h  csh-page-whlctl.ui
test/: can1.yaml  can2.yaml
tests/: environment_tests.cpp  meson.build  param_slash_parse_array_tests.c  require_version_tests.cpp  url_utils_tests.c  valgrind_test.py  valgrind_test_csh.ini
yaml/: a.yaml  b.yaml  bridge.yaml  bridge_can_uart.yaml  bridge_uart_can.yaml  can.csh  can.yaml  uart.yaml  udp.yaml  zmq.csh  zmq.yaml
yaml/ipp/: module_config.yaml  pipeline_config.yaml  pipeline_module2_config.yaml
